cmake_minimum_required(VERSION 3.18)
project(as9 LANGUAGES CXX)
add_subdirectory(raylib-cpp)
file(GLOB sources "src/*.cpp" "src/*.c")
add_executable(as9 ${sources})
target_link_libraries(as9 PUBLIC raylib raylib_cpp raylib::buffered)
set_property(TARGET as9 PROPERTY CXX_STANDARD 20)

configure_file(381Resources/textures/skybox.png 381Resources/textures/skybox.png COPYONLY)
configure_file(381Resources/textures/grass.jpg 381Resources/textures/grass.jpg COPYONLY)
configure_file(381Resources/textures/water.jpg 381Resources/textures/water.jpg COPYONLY)
configure_file(models/rp_mei_posed_001_30k.obj models/rp_mei_posed_001_30k.obj COPYONLY)
configure_file(models/15580_Equestrian_Obstacles-Wall_and_Rails_v1.obj models/15580_Equestrian_Obstacles-Wall_and_Rails_v1.obj COPYONLY)
configure_file(models/16314_MTBike_obstacle05_v1.obj models/16314_MTBike_obstacle05_v1.obj COPYONLY)
configure_file(381Resources/audio/score.mp3 381Resources/audio/score.mp3 COPYONLY)
configure_file(381Resources/audio/gameover.mp3 381Resources/audio/gameover.mp3 COPYONLY)
configure_file(381Resources/audio/jump.mp3 381Resources/audio/jump.mp3 COPYONLY)
configure_file(381Resources/audio/cdg.mp3 381Resources/audio/cdg.mp3 COPYONLY)

include(includeable.cmake)

make_includeable(raylib-cpp/raylib/examples/models/resources/shaders/glsl330/skybox.vs generated/glsl330/skybox.vs)
make_includeable(raylib-cpp/raylib/examples/models/resources/shaders/glsl330/skybox.fs generated/glsl330/skybox.fs)
make_includeable(raylib-cpp/raylib/examples/models/resources/shaders/glsl330/cubemap.fs generated/glsl330/cubemap.fs)
make_includeable(raylib-cpp/raylib/examples/models/resources/shaders/glsl330/cubemap.vs generated/glsl330/cubemap.vs)
make_includeable(raylib-cpp/raylib/examples/models/resources/shaders/glsl100/skybox.vs generated/glsl100/skybox.vs)
make_includeable(raylib-cpp/raylib/examples/models/resources/shaders/glsl100/skybox.fs generated/glsl100/skybox.fs)
make_includeable(raylib-cpp/raylib/examples/models/resources/shaders/glsl100/cubemap.vs generated/glsl100/cubemap.vs)
make_includeable(raylib-cpp/raylib/examples/models/resources/shaders/glsl100/cubemap.fs generated/glsl100/cubemap.fs)
